--- a/public/css/style.css
+++ b/public/css/style.css
@@ -34,12 +34,12 @@
   border-color: #6b99e0;
   height: 25px;
   width: 250px;
+  padding: 10px 15px;
 }
 
 .button{
-  height:30px;
+  padding: 15px 15px;
   background-color: #283e60;
-  width: 40px;
 }
 
 .button:hover{
